<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.developers.sugarsinitiative.musk.Main5Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="74dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/k"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/k"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="-77dp"
                    android:layout_weight="2"
                    android:background="#FFFFFF"
                    android:hint="@string/milminhint"
                    android:inputType="numberDecimal"
                    android:maxLength="10" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:maxLength="3"
                    android:text=""
                    android:textSize="18sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="74dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/T"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/T"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="2"
                    android:background="#FFFFFF"
                    android:inputType="numberDecimal"
                    android:maxLength="10" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:maxLength="3"
                    android:text="@string/time"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="70dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/WEIGHT"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/weight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="9dp"
                    android:layout_weight="2"
                    android:background="#FFFFFF"
                    android:inputType="number"
                    android:maxLength="6" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:maxLength="3"
                    android:text="@string/Kilos"
                    android:textSize="18sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">


                <Button
                    android:id="@+id/button"
                    style="@style/Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="10dp"
                    android:gravity="start"
                    android:onClick="calculateValue"
                    android:text="@string/button1text" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bottext3" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
